[gd_scene load_steps=2 format=2]

[ext_resource path="res://entities/ai/PatrolAI.gd" type="Script" id=1]

[node name="PatrolAI" type="Node2D"]
script = ExtResource( 1 )

[node name="WallCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 10, 0 )
collision_mask = 33

[node name="FallCheck" type="RayCast2D" parent="."]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 33

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
